plugins {
	id "net.fabricmc.fabric-loom-remap" version "${loom_version}" apply false
}

subprojects {
	group = rootProject.maven_group
	version = rootProject.mod_version

	plugins.withType(JavaPlugin).configureEach {
		java {
			sourceCompatibility = JavaVersion.VERSION_21
			targetCompatibility = JavaVersion.VERSION_21
		}

		tasks.withType(JavaCompile).configureEach {
			options.encoding = "UTF-8"
			options.release = 21
		}
	}
}
